fdo#58415: Don't ignore osl_getFileURLFromSystemPath failure

...in osl_getFileStatus et al, it would leave the relevant status string member
unchanged (i.e., a null pointer) but would mark it as valid, so that later code
to retrieve the allegedly valid string member would crash upon the null pointer.

Change-Id: Ia8528f5dc27d94f3d14a2c416955a041b87863d3
(cherry picked from commit 588997f0ebc5696574680098b128e66eff54f00c)
Reviewed-on: https://gerrit.libreoffice.org/1720
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Eike Rathke <erack@redhat.com>